[project]
name = "claude-thread-manager"
version = "0.1.0"
description = "Thread management wrapper for Claude CLI with persistent conversation context"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["claude", "cli", "thread", "conversation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/your-username/claude-thread-manager"
Repository = "https://github.com/your-username/claude-thread-manager.git"
Issues = "https://github.com/your-username/claude-thread-manager/issues"

[project.scripts]
ct = "claude_thread_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_thread_manager"]